--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -1,5 +1,20 @@
 ---
 zh:
+  partner:
+      kols:
+        id: Id
+        name: 昵称
+        mobile_number: 手机号
+        created_at: 创建时间
+        invites_count: 已接活动数
+        show_valid_count: 有效点击数
+        show_count: 总点击数
+        avail_amount: 可提现金额
+        historical_income: 历史净收益
+        child_count: 下层人数
+        view:	查看
+
+      
   campaign:			
     name: "活动名称"
     status: "活动状态"
