--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -371,6 +371,8 @@ en:
       entertainment: Entertainment
   partner:
     dashboard:
+      data_statistics: Statistics
+      kol_incomes: KOL Gains List
       chart1:
         title: Past 7 days Champion
         champion: Past 7 days Incomes
