update brand api

--- a/config/locales/brand_api.en.yml
+++ b/config/locales/brand_api.en.yml
@@ -29,6 +29,7 @@ en:
         third_party_error: "Call a third-party interface error, please contact customer service"
         email_format_error: "Email format error"
         forget_not_found: "The user has not been registered"
+        params_error: 'Params error'
   success:
     messages:
       code_succeed: 'Verification code sent successfully'
