--- a/config/locales/brand_api.zh.yml
+++ b/config/locales/brand_api.zh.yml
@@ -30,6 +30,7 @@ zh:
         third_party_error: "调用第三方接口错误，请联系客服"
         email_format_error: "邮箱格式错误"
         forget_not_found: "该用户尚未注册"
+        params_error: '参数错误'
     success:
       messages:
         code_succeed: '验证码发送成功'
